add header and description for homepage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
 
     <body>
+        <h1> Odin Recipes  </h1>
+        <h3> List of Recipes: </h3>
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/hotdog_roll.html">Hotdog Roll</a></li>
