Add CSS styling to html
Two different styling for homepage and subpage
Add minor adjustment on html file to add selector
Styling done more on text, alignment, color and font

[Ticket: X]

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title> Odin Recipe </title>
+        <link rel="stylesheet", href="./style.css"
     </head>
 
     <body>
-        <h1> Odin Recipes  </h1>
-        <h3> List of Recipes: </h3>
+        <h1 class="home"> Odin Recipes  </h1>
+        <h3 class="recipe"> List of Recipes: </h3>
         <ul>
-            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="./recipes/hotdog_roll.html">Hotdog Roll</a></li>
-            <li><a href="./recipes/orange_chicken.html">Orange Chicken</a></li>
+            <li class="recipes lasagna"><a href="./recipes/lasagna.html" target="_blank">Lasagna</a></li>
+            <li class="recipes hotdog"><a href="./recipes/hotdog_roll.html" target="_blank">Hotdog Roll</a></li>
+            <li class="recipes orange"><a href="./recipes/orange_chicken.html" target="_balnk">Orange Chicken</a></li>
         </ul>
     </body>
 </html>
