--- a/recipes/hotdog_roll.html
+++ b/recipes/hotdog_roll.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title> Hotdog Roll </title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
-        <a href="../index.html"> Home </a>
-        <h1> Hotdog Roll </h1>
+        <h6 class="home"><a href="../index.html"> Home </a></h6>
+        <h1 class="main"> Hotdog Roll </h1>
         <img src="https://www.allrecipes.com/thmb/9_KzEYQ70fZEx6qFQAftjwhBgvI=/160x90/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8678872-Hot-Dog-Roll-Ups-ddmfs-3x4-039-989de4fe4d4e41d0a9440d94010e536a.jpg" alt="Hotdog Roll" height="130" width="150">
-        <h3> Description </h3>
+        <h3 class="desc"> Description </h3>
         <p>
             Just when you thought hot dogs couldn't get more fun, here's a tasty new twist.
         </p>
