--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title> Lasagna </title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
-        <a href="../index.html"> Home </a>
-        <h1> Lasagna </h1>
+        <h6 class="home"><a href="../index.html"> Home </a></h6>
+        <h1 class="main"> Lasagna </h1>
         <img src="https://www.allrecipes.com/thmb/8R6Zb5Cvs5Rwj0Jaf6PCdCOmDls=/160x90/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/12011-Easy-Lasagna-DDMFS-4x3-1491-62dd050e31b849f1bb54e13becf5cb98.jpg" alt="Easy Lasagna" height="130" width="150">
-        <h3> Description </h3>
+        <h3 class="desc"> Description </h3>
         <p> Making perfect homemade lasagna doesn't have to be tedious. This top-rated easy lasagna recipe comes together quickly with a relatively short ingredient list. </p>
         <p> An easy lasagna recipe that will saves you lots of time.</p>
         <h3> Ingredients: </h3>
