--- a/recipes/orange_chicken.html
+++ b/recipes/orange_chicken.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title> Orange Chicken </title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
-        <a href="../index.html"> Home </a>
-        <h1> Orange Chicken </h1>
+        <h6 class="home"><a href="../index.html"> Home </a></h6>
+        <h1 class="main"> Orange Chicken </h1>
         <img src="https://www.allrecipes.com/thmb/ohu09JIacyje7-_COFh-71GN15M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4-ingredient-orange-chicken-recipe-8713472Christina4x3-d428f35780464083bacc79e7a37eae28.jpg" alt="Orange chicken" height="130" width="150">
-        <h3> Description </h3>
+        <h3 class="desc"> Description </h3>
         <p> 
             This 4-ingredient orange chicken made with frozen chicken tenders is great for when you're craving takeout. 
         </p>
